Fix fome issues

--- a/index.html
+++ b/index.html
@@ -92,9 +92,8 @@
           </div>
           <div class="inner-row">
             <input type="button" value="^" id="pow" class="operators" onclick="setVal('^')">
-            <input type="button" value="π" id="pow" class="operators" onclick="setVal('3.14')">
             <input type="button" value="=" id="equal" class="operators" onclick="solve()">
-            <input type="button" value="x²" id="pow" class="operators" onclick="setVal('^2')">
+            <input type="button" value="x²" id="square" class="operators" onclick="setVal('^2')">
             <input type="button" value="√" id="sqrt" class="operators" onclick="setVal('√')">
           </div>
         </div>
