Edited light animations again

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <span class="title noselect"><i class="fas fa-adjust"></i> Light Control</span>
         <div class="switches">
           <div class="switch">
-            <span class="noselect"><i class="fas fa-palette"></i> Numpad Color Animation </span>
+            <span class="noselect"><i class="fas fa-palette"></i> Enable Light Animation </span>
             <a role="button" id="btn-switch" class="switch-off"></a>
           </div>
           <div class="switch">
@@ -24,10 +24,10 @@
             <a role="button" id="btn-switch-2" class="switch-off"></a>
           </div>
           <div class="switch">
-            <span class="noselect"><i class="fas fa-exchange-alt"></i> Change Numpad Color</span>
+            <span class="noselect"><i class="fas fa-exchange-alt"></i> Change Numpads Color</span>
             <div class="colors-radio">
               <div class="color">
-                <label for="white" class="noselect">White</label><input type="radio" value="white" name="colors"
+                <label for="white" class="noselect">Default</label><input type="radio" value="white" name="colors"
                   id="white" class="radio-btn" checked>
               </div>
               <div class="color">
